# hospital-dashboard-platform

./: .gitignore  ARCHITECTURE.md  LICENSE  MAINTENANCE.md  MPAX.md  README.md  generate_client.sh  hospital_analytics.duckdb  package-lock.json  update_llm_client.py  vitest.config.ts
.github/workflows/: ci-pipeline.yml  test-python-and-angular.yml
PulseQuery/: .gitignore  README.md  gradle.properties  settings.gradle.kts
PulseQuery/composeApp/: build.gradle.kts
PulseQuery/gradle/: libs.versions.toml
PulseQuery/iosApp/Configuration/: Config.xcconfig
PulseQuery/iosApp/iosApp.xcodeproj/: project.pbxproj
backend/: .coverage  .env.tpl  alembic.ini  docker-compose.yml  hospital_analytics.duckdb  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/alembic/: env.py
backend/alembic/alembic/versions/: 001_initial_users.py
backend/alembic/versions/: 001_initial_users.py  002_add_templates.py  003_feedback.py  004_chat_history.py  005_chat_candidates.py  006_add_sql_hash_to_candidates.py  3327052dcb84_add_is_admin_and_adminsetting.py
backend/coverage/: coverage.json
backend/data/: README.md  Synthetic_hospital_data.csv  Synthetic_hospital_data_transfers.bak  Synthetic_hospital_data_transfers.csv  benchmark_gold.json  hospital_data.csv  initial_templates.json  mpax_benchmark_scenarios.json
backend/scripts/: __init__.py  extract_openapi.py  generate_mpax_benchmarks.py  generate_report.py  ingest.py  run_benchmark.py  score_mpax_arena.py  seed_templates.py  update_models.py
backend/src/app/: main.py  main.py.bak  main.py.patch
backend/src/app/api/: deps.py
backend/src/app/api/routers/: admin.py  ai.py  analytics.py  auth.py  benchmarks.py  benchmarks.py.bak  chat.py  dashboards.py  execution.py  mpax_arena.py  schema.py  simulation.py  templates.py
backend/src/app/core/: config.py  security.py
backend/src/app/database/: duckdb.py  duckdb_init.py  postgres.py
backend/src/app/models/: admin_setting.py  chat.py  dashboard.py  feedback.py  template.py  user.py
backend/src/app/schemas/: admin.py  admin.py.rej  ai.py  analytics.py  chat.py  dashboard.py  db_schema.py  feedback.py  mpax_arena.py  simulation.py  template.py  token.py  user.py  widget.py
backend/src/app/services/: admin.py  cache_service.py  data_ingestion.py  llm_client.py  mpax_arena_service.py  mpax_bridge.py  provisioning.py  schema.py  simulation_service.py  sql_generator.py  sql_utils.py  template_seeder.py
backend/src/app/services/prompt_engineering/: __init__.py  few_shot_rag.py  interfaces.py  macro_cot.py  zero_shot.py
backend/src/app/services/runners/: __init__.py  http.py  sql.py
backend/tests/: conftest.py  test_admin.py  test_ai_api.py  test_analytics_api.py  test_api_deps.py  test_auth_api.py  test_benchmark_data.py  test_benchmark_runner.py  test_benchmarks_api.py  test_benchmarks_api.py.patch  test_caching.py  test_chat_api.py  test_chat_api_edges.py  test_core_config.py  test_core_security.py  test_dashboard_api.py  test_dashboard_api_errors.py  test_data_ingestion.py  test_data_ingestion_extended.py  test_database_duckdb.py  test_database_duckdb_errors.py  test_database_postgres.py  test_duckdb_advanced.py  test_duckdb_init_errors.py  test_duckdb_macros.py  test_duckdb_udf.py  test_execution_api.py  test_execution_api_caching.py  test_execution_api_edges.py  test_execution_params.py  test_feature_admission_lag.py  test_feature_bottleneck_analysis.py  test_feature_clinical_risk.py  test_feature_day_of_week_volatility.py  test_feature_predictive_availability.py  test_llm_client.py  test_llm_client.py.rej  test_main_lifespan.py  test_main_root.py  test_model_chat.py  (+35 more)
e2e/: playwright.config.ts
e2e/specs/: analytics-flow.spec.ts
pulse-query-ng-web/: .gitignore  README.md  add_docs.ts  angular.json  ml_futures_generated17.tex  package-lock.json  package.json  playwright.config.ts  test-coverage.sh  tsconfig.doc.json  tsconfig.spec.json  vitest.config.ts
pulse-query-ng-web/documentation/: theming.md
pulse-query-ng-web/documentation/js/routes/: routes_index.js
pulse-query-ng-web/e2e/: accessibility.spec.ts  auth.spec.ts  chat.spec.ts  dashboard-layout.spec.ts  dashboard-lifecycle.spec.ts  e2e-workflow.spec.ts  example.spec.ts  fixtures.ts  query-cart.spec.ts  register.spec.ts  simulation.spec.ts  widget-custom-sql.spec.ts  widget-templates.spec.ts
pulse-query-ng-web/src/: index.html  main.server.spec.ts  main.server.ts  main.spec.ts  main.ts  server.spec.ts  server.ts  styles.scss  template-coverage.spec.ts  test-setup.ts
pulse-query-ng-web/src/app/: app.config.server.spec.ts  app.config.server.ts  app.config.spec.ts  app.config.ts  app.html  app.routes.server.spec.ts  app.routes.server.ts  app.routes.spec.ts  app.routes.ts  app.spec.ts  app.ts
pulse-query-ng-web/src/app/admin/: admin.component.spec.ts  admin.component.ts
pulse-query-ng-web/src/app/analytics/: analytics.component.html  analytics.component.spec.ts  analytics.component.ts  analytics.service.spec.ts  analytics.service.ts
pulse-query-ng-web/src/app/api-client/: README.md  api.base.service.ts  api.module.ts  configuration.ts  encoder.ts  index.ts  index.ts.rej  param.ts  provide-api.ts  query.params.ts  variables.ts
pulse-query-ng-web/src/app/benchmarks/: benchmarks.component.spec.ts  benchmarks.component.spec.ts.bak  benchmarks.component.spec.ts.orig  benchmarks.component.spec.ts.patch  benchmarks.component.ts  benchmarks.component.ts.bak  benchmarks.component.ts.patch  benchmarks.service.spec.ts  benchmarks.service.ts  benchmarks.service.ts.bak
pulse-query-ng-web/src/app/chat/: arena-sql.service.spec.ts  arena-sql.service.ts  chat-layout.component.html  chat-layout.component.spec.ts  chat-layout.component.ts  chat.store.spec.ts  (+1 more)
pulse-query-ng-web/src/environments/: environment.spec.ts  environment.ts
pulse-query-ng-web/src/test-mocks/: material-color-utilities.spec.ts  material-color-utilities.ts
pulse-query-ng-web/src/test-utils/: component-resources.spec.ts  component-resources.ts
scripts/: update_coverage_badges.py
(+334 files in other folders)
